# doge-guard

./: .gitignore  README.md  a2f_cc.py  analyze.py  backend.py  cfr_to_fr.py  get_rules.py  rag.py  requirements.txt  server.py  visualize.py  yes_results.py
frontend/: TODO.md
frontend/app/: layout.tsx  page.tsx
frontend/app/focus/: layout.tsx
frontend/app/focus/[frdocno]/: page.tsx
rust_rewrite/: Cargo.toml
rust_rewrite/src/: main.rs
rust_server/: Cargo.toml
rust_server/src/: main.rs
