[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.20.2"
polars = "0.45.1"
quick-xml = "0.37.2"
regex = "1.11.1"
reqwest = { version = "=0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = "3.12.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-utils = "0.1.2"
toml = "0.8.19"
